--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,22 @@
 {
   "rewrites": [
     {
+      "source": "/projects",
+      "destination": "/main-panel/projects"
+    },
+    {
+      "source": "/projects/",
+      "destination": "/main-panel/projects/"
+    },
+    {
+      "source": "/projects/:page(addProject|projectList|editProject)",
+      "destination": "/main-panel/projects/:page"
+    },
+    {
+      "source": "/projects/:page(addProject|projectList|editProject)/",
+      "destination": "/main-panel/projects/:page/"
+    },
+    {
       "source": "/main-panel/:page(addProject|projectList|editProject)",
       "destination": "/main-panel/projects/:page"
     },
